Fixed thumb grid jump bug, added mixin, and tablet breakpoint

--- a/sass/_library.scss
+++ b/sass/_library.scss
@@ -85,6 +85,17 @@ $titlefont: 'futura-alt', 'futura medium', arial, sans-serif;
 //                        //
 ////////////////////////////
 
+@mixin makeGrid($columns, $margin) {
+  width: ((100% - (($columns - 1) * $margin)) / $columns);
+  &:nth-child(n) {
+    margin-bottom: $margin;
+    margin-right: $margin;
+  }
+  &:nth-child(#{$columns}n+1) {
+    margin-right: 0;
+  }
+}
+
 /////////////////////
 //				   //
 //	    LAYOUT     //
